@@ -1,3 +1,9 @@
+2006-06-21  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* ldlang.c (lang_insert_orphan): Correctly handle the case where
+	the section is to end up after the section currently at the end
+	of the list in output_bfd.
+
 2006-06-21  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* emultempl/mmo.em: Improve comments.  Explain why there's
